--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
+    "nexmo": "^2.5.3",
+    "pug": "^2.0.4",
     "validator": "^12.1.0"
   }
 }
